	- "A" releases are "Major Releases" - Big day! Huge rewrites with tons of new features, optimizations
	- "B" releases are "Major Minor Releases" - Cool new features + rewrites, sometimes prone to issues due to new code.
	- "C" releases are "Minor Releases" - Contain bug fixes and improvements to code

********************************************************


Version 2.0.1
	- Features 
		- Bug fix - Meta on blog page
		- Better background handling
		- Posts category mode, uses featured images
	- Carousel - Taxonomy select, tweaks
	- Performance - Post Saving - Changed hook
	- Multisite - Added support for 'blogs' folder in customize plugin
	- Bugs - Remove css3 media queries js ( broken )
	- Features - Category mode now pulls in featured image
------------------------------------- Date: 12-22-2011

Version 2.0.0
	
	Official Release 2.0.0!
	- Special Thanks to
		- Chris Johnston (Awesome New Documentation)
		- Beta Tester Team (Mike Zielonka, Ian Sterne, Posey Gaines)

	Hotfixes
	- Nav Enhancement - Better highlighting
	- Store - Remove integration buttons for non-dev

	Release Candidate Four
	- Bugs - Screenshot url fix.
	- Fix sandbox urls.
	- MU - multisite fixes and css tweaks.
	
	Release Candidate Three
	- Localization - Translation fixes.
	- Bugs - Layout bug fixed.
	- Docs - Inline help added (chris).
	- Bugs - Screenshot url fix.
	- Bugs - base_url fix.
	
	Release Candidate Two
	- Welcome Screen Changes
	- Fixed Layout Management Bug
	- Add class to feature link
	- Misc improvements
	
	Release Candidate One
	- Integrations - Special Settings fixed.
	- Section - Refined Carousel
	- Bugs - Fixed special option handling
	- Store - New interface
	
	BETA - 32
	- Store - Error Fix
	
	BETA - 31
	- Integrations Special Settings.
	- IE Handling.
	
	BETA - 30
	- Extension - Added new footer hooks.

	BETA - 29
	- Localization - i18n fixes
	- Option - new 'fonts' option.

	BETA - 28
	- Various fixes
	- Store refining
	- Upgrade paths added

	BETA - 27
	- Refactoring
